# bitpack

./: CMakeLists.txt  LICENSE.txt  README.md  explained.md
include/: bitpack.h
test/: main.cpp
